<resources>
    <string name="app_name">Jay\'s Calculator</string>
    <string name="Equals">=</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>
    <string name="Decimal">.</string>
    <string name="Three">3</string>
    <string name="Zero">0</string>
    <string name="Two">2</string>
    <string name="Clear">C</string>
    <string name="One">1</string>
    <string name="Six">6</string>
    <string name="Five">5</string>
    <string name="Four">4</string>
    <string name="Nine">9</string>
    <string name="Eight">8</string>
    <string name="Seven">7</string>
    <string name="Parentheses">()</string>
    <string name="Filler">Filler</string>
    <string name="Calculator">Calculator</string>
    <string name="BackSpace"><![CDATA[<-]]></string>
    <string name="result_hint">Enter Expression Here</string>
    <string name="history_button">History</string>
    <string name="empty_history_hint">No History</string>
    <string name="clear_history">Clear History</string>
    <string name="history_back">Back</string>
</resources>
